assets/css/style.scss
html {
    width: 100%;
    min-height: 100%;
    display: flex;
}

body {
    width: 100%;
    min-height: 100%;
    display: flex;
    flex-direction: column;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Open Sans', sans-serif;
}

h1 {
    font-size: 3rem;
    margin-bottom: 2rem;
}

h2 {
    font-size: 2rem;
    margin-top: 1.5rem;
    margin-bottom: .15rem;
}

h3 {
    font-size: 1.5rem;
    margin-top: 1rem;
    margin-bottom: .15rem;
}

main a {
    text-decoration: none;
    border-bottom: 1px solid #000;
    color: #000;
    
    &:hover {
        border-bottom: 2.5px solid black;
    }
}

main ul {
    list-style-type: none;

    li {
        margin-top: 7.5px;
        margin-left: 15px;
    }
}

main.home {
    flex-grow: 1;
    margin: 0px;
    background: linear-gradient(rgba(0, 0, 0, .3) 0%, rgba(0, 0, 0, 0.65) 59%), url(/images/IMG_4726.jpg) center center;
    background-size: cover;
    color: #fff;
    display: grid;
}

main.home h1,
main.notfound h1 {
    margin: auto;
    margin-bottom: 0px;
    font-size: 4.5rem;
    text-shadow: 5px 5px 16px #000;
    text-align: center;
}

main.home div.description {
    margin: 0 auto auto auto;
    display: flex;
    flex-direction: column;
}

main.home div.description p,
main.notfound p {
    margin: auto;
    margin-top: 0px;
    max-width: 75%;
    text-shadow: 2px 2px 5px #000;
}

main.home .button-link {
    display: block;
    margin: 15px auto 0 auto;
    padding: 10px 15px;
    background-color: #ffffff;
    color: #000;
    text-decoration: none;
    text-align: center;
    border-radius: 4px;
    box-shadow: 2px 2px 8px #000;
    transition: background-color 0.3s ease;
}

main.home .button-link:hover {
    background-color: #fff;
}

main.home a,
main.notfound a {
    text-decoration: none;
    border-bottom: 1px solid #fff;
    color: #fff;
}

main.notfound {
    flex-grow: 1;
    margin: 0px;
    background: linear-gradient(rgba(0, 0, 0, .3) 0%, rgba(0, 0, 0, 0.65) 59%), url(/images/erik-mclean-bGWVhFY1gH0-unsplash.jpg) center center;
    background-size: cover;
    color: #fff;
    display: flex;
    flex-direction: column;
}

main.notfound a {
    color: #fff;
}

@media only screen and (max-width: 600px) {

    main.home p,
    main.notfound p {
        max-width: 85%;
    }
}

.o-header {
    width: 100%;
    margin: 0;
}

.o-nav {
    width: 100%;
    max-width: 500px;
    padding: 1rem;
    margin: 0 auto;
}

.o-nav__list {
    list-style-type: none;
    display: flex;
    justify-content: space-around;
}

.o-nav__item {
    width: 100%;
    margin-right: 1rem;
}

.o-nav__item:last-child {
    margin-right: 0;
}

.o-nav__item .active {
    background-color: black;
    color: #fff;
}

.o-nav__link {
    text-decoration: none;
    padding: 0.75rem 0;
    border-radius: 4px;
    text-align: center;
    display: block;
    color: black;
    transition: 0.2s ease background-color, 0.2s ease color;
}

.o-nav__link:hover,
.o-nav__link--active {
    background-color: black;
    color: #fff;
}

.o-main {
    width: 95%;
    max-width: 700px;
    padding: 1rem;
    margin: auto;
    margin-top: 1rem;
}

.o-footer {
    text-align: center;
    padding: 1rem;
    width: 95%;
    max-width: 700px;
    margin: 0 auto;
}

.c-bloglist__item {
    margin-bottom: 2rem;
}

.c-bloglist__metas {
    font-size: 0.8rem;
    font-weight: 600;
    color: #777;
    text-transform: uppercase;
    margin: 0.5rem 0;
}

.c-bloglist__header {
    margin: 0 0 2rem 0;
}

.c-bloglist__header h1 {
    margin: auto;
}

.c-bloglist__heading {
    font-weight: 700;
}

h2.c-bloglist__heading {
    font-size: 2rem;
}

.c-bloglist__headinglink {
    color: #000;
}

.c-bloglist__summary {
    margin-bottom: 0.5rem;
}

.c-bloglist__link {
    color: #000;
}

.c-blogpost__metas {
    font-size: 0.8rem;
    font-weight: 600;
    color: #777;
    text-transform: uppercase;
    margin-bottom: 0.5rem;
}

.c-blogpost__heading {
    font-weight: 700;
}

.c-blogpost__heading h1 {
    margin: auto;
}

.c-blogpost h2 {
    margin: 1.5rem auto 0 auto;
}

.c-blogpost img {
    width: 100%;
    margin: 1rem auto;
}

.c-blogpost p {
    margin: auto;
    margin-top: 1rem;
}

.c-blogpost ol {
    margin: 2.5rem;
    margin-top: 1rem;
}

.text-center {
    text-align: center;
}

